# conversation-knowledge

./: BACKLOG.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_ollama.py
data/: simulation_messages.json
db/: connection.py  init.sql
models/: schemas.py
services/: embedding_service.py  knowledge_extractor.py  knowledge_store.py  qdrant_service.py  thread_builder.py
simulation/: run_simulation.py
simulation/scenarios/: happy_path.json
