[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teams-knowledge"
version = "0.1.0"
description = "Transform Teams conversations into structured technical knowledge"

requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "ollama>=0.2",
    "fastapi>=0.111",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "pydantic>=2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "pytest>=8.0",
]
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
 